--- a/index.html
+++ b/index.html
@@ -6,132 +6,190 @@
   <style>
     body {
       margin: 0;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: black;
-      color: red;
+      font-family: "Trebuchet MS", sans-serif;
+      background-color: #111;
+      color: #eee;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      text-align: center;
     }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      text-shadow: 0 0 10px red, 0 0 20px darkred;
-    }
-
     .container {
-      background: rgba(20, 20, 20, 0.9);
+      text-align: center;
+      max-width: 600px;
       padding: 20px;
-      border: 2px solid red;
-      border-radius: 10px;
-      width: 320px;
-      box-shadow: 0 0 20px red;
     }
-
+    h1, h2, h3 {
+      margin-bottom: 20px;
+    }
     input, button {
-      margin: 8px 0;
-      padding: 10px;
-      width: 100%;
-      border: 2px solid red;
+      padding: 10px 15px;
+      margin: 10px 0;
+      border: none;
       border-radius: 5px;
-      background: black;
-      color: red;
-      font-size: 1rem;
+      font-size: 16px;
     }
-
-    input::placeholder {
-      color: #777;
+    input {
+      width: 60%;
     }
-
-    button:hover {
-      background: darkred;
+    button {
+      background-color: #c00;
+      color: white;
       cursor: pointer;
     }
-
-    #result {
+    button:hover {
+      background-color: #900;
+    }
+    .hidden {
+      display: none;
+    }
+    .reward-box {
+      border: 2px solid #c00;
+      padding: 15px;
+      margin: 20px 0;
+      background-color: #222;
+      font-size: 18px;
+      font-weight: bold;
+    }
+    .stats {
       margin-top: 20px;
-      font-size: 1.1rem;
-      min-height: 40px;
+      font-size: 14px;
+      color: #bbb;
     }
   </style>
 </head>
 <body>
-  <h1>Раба Желаний</h1>
   <div class="container">
-    <input type="text" id="nickname" placeholder="Введите ник">
-    <button onclick="startGame()">Начать игру</button>
-    <div id="game" style="display:none;">
-      <p id="question"></p>
-      <input type="number" id="choice" placeholder="Введите номер">
-      <button onclick="checkChoice()">Выбрать</button>
-      <div id="result"></div>
+
+    <!-- Экран 1: ник -->
+    <div id="screen-nick">
+      <h1>Раба желаний</h1>
+      <p>Введите свой ник:</p>
+      <input type="text" id="nickname" placeholder="Ваш ник">
+      <br>
+      <button onclick="startGame()">Начать</button>
     </div>
+
+    <!-- Экран 2: выбор желания -->
+    <div id="screen-choice" class="hidden">
+      <h2 id="welcome"></h2>
+      <p id="choice-text"></p>
+      <input type="number" id="wishNumber" min="1">
+      <br>
+      <button onclick="chooseWish()">Выбрать</button>
+      <div class="stats" id="stats-panel"></div>
+    </div>
+
+    <!-- Экран 3: результат -->
+    <div id="screen-result" class="hidden">
+      <h3 id="wishText"></h3>
+      <button onclick="completeWish(true)">✅ Выполнено</button>
+      <button onclick="completeWish(false)">❌ Не выполнено</button>
+      <div id="reward-section" class="hidden">
+        <h3>Ваша награда от Него:</h3>
+        <div class="reward-box" id="rewardText"></div>
+        <button onclick="nextRound()">Продолжить</button>
+      </div>
+      <div id="fail-section" class="hidden">
+        <h3>Ты отказалась. -1 балл</h3>
+        <button onclick="nextRound()">Продолжить</button>
+      </div>
+      <div class="stats" id="stats-panel2"></div>
+    </div>
+
   </div>
 
   <script>
     let wishes = [];
     let rewards = [];
-    let currentWish = null;
+    let currentPlayer = "";
+    let currentWish = "";
+    let stats = JSON.parse(localStorage.getItem("stats")) || {};
 
-    // Функция загрузки JSON с обходом кэша
-    function loadJSON(url) {
-      return fetch(url + "?v=" + Date.now())
-        .then(response => response.json());
-    }
-
-    // Загружаем списки
-    Promise.all([
-      loadJSON("wishes.json"),
-      loadJSON("rewards.json")
-    ]).then(([w, r]) => {
+    async function loadData() {
+      const w = await fetch("wishes.json").then(r => r.json());
+      const r = await fetch("rewards.json").then(r => r.json());
       wishes = w;
       rewards = r;
-    });
+    }
 
     function startGame() {
-      const nickname = document.getElementById("nickname").value.trim();
-      if (!nickname) {
+      currentPlayer = document.getElementById("nickname").value.trim();
+      if (!currentPlayer) {
         alert("Введите ник!");
         return;
       }
-      document.getElementById("game").style.display = "block";
-      document.getElementById("question").innerText = 
-        `Привет, ${nickname}! Выбери число от 1 до ${wishes.length}`;
+      if (!stats[currentPlayer]) {
+        stats[currentPlayer] = { score: 0, completed: 0, failed: 0 };
+      }
+      document.getElementById("screen-nick").classList.add("hidden");
+      document.getElementById("screen-choice").classList.remove("hidden");
+      document.getElementById("welcome").innerText = "Привет, " + currentPlayer + "!";
+      document.getElementById("choice-text").innerText = 
+        "Выбери число от 1 до " + wishes.length;
+      updateStats();
     }
 
-    function checkChoice() {
-      const num = parseInt(document.getElementById("choice").value);
-      const result = document.getElementById("result");
-
+    function chooseWish() {
+      const num = parseInt(document.getElementById("wishNumber").value);
       if (isNaN(num) || num < 1 || num > wishes.length) {
-        result.innerText = `Введите число от 1 до ${wishes.length}`;
+        alert("Введите корректное число!");
         return;
       }
-
       currentWish = wishes[num - 1];
-      result.innerHTML = `
-        Его желание: <b>${currentWish}</b><br>
-        <button onclick="finishWish(true)">Выполнено</button>
-        <button onclick="finishWish(false)">Не выполнено</button>
-      `;
+      document.getElementById("wishText").innerText = "Желание: " + currentWish;
+      document.getElementById("screen-choice").classList.add("hidden");
+      document.getElementById("screen-result").classList.remove("hidden");
+      document.getElementById("reward-section").classList.add("hidden");
+      document.getElementById("fail-section").classList.add("hidden");
+      updateStats();
     }
 
-    function finishWish(done) {
-      const result = document.getElementById("result");
-      if (done) {
-        const reward = rewards[Math.floor(Math.random() * rewards.length)];
-        result.innerHTML = `🎉 Поздравляем! Твоя награда от Него: <b>${reward}</b>`;
+    function completeWish(success) {
+      if (success) {
+        stats[currentPlayer].score += 2;
+        stats[currentPlayer].completed++;
+        if (rewards.length > 0) {
+          const randIndex = Math.floor(Math.random() * rewards.length);
+          const reward = rewards[randIndex];
+          rewards.splice(randIndex, 1); // убираем награду
+          document.getElementById("rewardText").innerText = reward;
+          document.getElementById("reward-section").classList.remove("hidden");
+        } else {
+          document.getElementById("rewardText").innerText = "Награды закончились!";
+          document.getElementById("reward-section").classList.remove("hidden");
+        }
       } else {
-        result.innerHTML = `❌ Игра окончена. Ты не справилась, сучка.`;
+        stats[currentPlayer].score -= 1;
+        stats[currentPlayer].failed++;
+        document.getElementById("fail-section").classList.remove("hidden");
       }
+      saveStats();
+      updateStats();
     }
+
+    function nextRound() {
+      document.getElementById("screen-result").classList.add("hidden");
+      document.getElementById("screen-choice").classList.remove("hidden");
+      document.getElementById("choice-text").innerText = 
+        "Выбери число от 1 до " + wishes.length;
+    }
+
+    function updateStats() {
+      const text = `👤 ${currentPlayer} | Очки: ${stats[currentPlayer].score} | Выполнено: ${stats[currentPlayer].completed} | Провалы: ${stats[currentPlayer].failed}`;
+      document.getElementById("stats-panel").innerText = text;
+      document.getElementById("stats-panel2").innerText = text;
+    }
+
+    function saveStats() {
+      localStorage.setItem("stats", JSON.stringify(stats));
+    }
+
+    loadData();
   </script>
 </body>
 </html>
+
 
 
 
