--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
   <!-- Экран 1: ник -->
   <div id="screen-nick">
-    <h1>Игра желаний</h1>
+    <h1>Раба желаний</h1>
     <p>Введите свой ник:</p>
     <input type="text" id="nickname" placeholder="Ваш ник">
     <br>
     <button onclick="startGame()">Начать</button>
   </div>
 
-  <!-- Экран 2: выбор его желания -->
+  <!-- Экран 2: выбор желания -->
   <div id="screen-choice" class="hidden">
     <h2 id="welcome"></h2>
     <p id="choice-text"></p>
